--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Privacy Policy - Be Social Games</title>
+    <title>Welcome to Be Social Games</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
             background-color: #f9f9f9;
+            text-align: center;
         }
         h1 {
             color: #333;
@@ -19,8 +20,21 @@
             color: #555;
             line-height: 1.6;
         }
-        section {
-            margin-bottom: 20px;
+        .links {
+            margin-top: 20px;
+        }
+        a {
+            display: inline-block;
+            margin: 10px 0;
+            padding: 10px 15px;
+            background-color: #4CAF50;
+            color: white;
+            text-decoration: none;
+            border-radius: 4px;
+            transition: background-color 0.3s;
+        }
+        a:hover {
+            background-color: #45a049;
         }
         footer {
             margin-top: 30px;
@@ -31,40 +45,13 @@
 </head>
 <body>
 
-    <h1>Privacy Policy</h1>
+    <h1>Welcome to Be Social Games</h1>
+    <p>Thank you for using our app! Here you can find important information about our privacy practices and how to get support.</p>
 
-    <p>Be Social Games ("we", "our", or "us") is committed to protecting your privacy. This Privacy Policy outlines how we handle your information when you use our app. Please read this policy carefully to understand our practices regarding your privacy.</p>
-
-    <section>
-        <h2>1. Data Collection</h2>
-        <p>We do not collect, store, or process any personal data or information from users. When you use our app, no data, including but not limited to personal identification, device information, location, or usage data, is collected by us.</p>
-    </section>
-
-    <section>
-        <h2>2. Third-Party Services</h2>
-        <p>Our app does not use any third-party services that collect data or track users. Since we do not collect data, we do not share any data with third parties.</p>
-    </section>
-
-    <section>
-        <h2>3. Security</h2>
-        <p>Since we do not collect any personal data, there is no data to secure or protect. However, we recommend that you take appropriate precautions to secure your device and protect your privacy while using the app.</p>
-    </section>
-
-    <section>
-        <h2>4. Children's Privacy</h2>
-        <p>Our app does not collect any data from any user, including children under the age of 13. If you are a parent or guardian and have any concerns about the use of the app by your child, feel free to contact us.</p>
-    </section>
-
-    <section>
-        <h2>5. Changes to This Privacy Policy</h2>
-        <p>We reserve the right to modify this Privacy Policy at any time. Any changes will be posted within the app, and the updated policy will be effective immediately upon posting. We encourage you to review this policy periodically to stay informed of any updates.</p>
-    </section>
-
-    <section>
-        <h2>6. Contact Us</h2>
-        <p>If you have any questions or concerns about this Privacy Policy, you can contact us at:</p>
-        <p>Email: <a href="mailto:support@besocialgames.com">support@besocialgames.com</a></p>
-    </section>
+    <div class="links">
+        <a href="privacy-policy.html">Privacy Policy</a>
+        <a href="support.html">Support</a>
+    </div>
 
     <footer>
         <p>&copy; 2024 Be Social Games. All rights reserved.</p>
