--- a/support.html
+++ b/support.html
@@ -68,7 +68,7 @@
 
     <section class="contact-form">
         <h2>Contact Us</h2>
-        <form action="mailto:support@besocialgames.com" method="post" enctype="text/plain">
+        <form action="mailto:info@besocialgames.com" method="post" enctype="text/plain">
             <label for="name">Your Name</label>
             <input type="text" id="name" name="name" placeholder="Your name.." required>
 
