--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -63,7 +63,7 @@
     <section>
         <h2>6. Contact Us</h2>
         <p>If you have any questions or concerns about this Privacy Policy, you can contact us at:</p>
-        <p>Email: <a href="mailto:support@besocialgames.com">support@besocialgames.com</a></p>
+        <p>Email: <a href="mailto:info@besocialgames.com">support@besocialgames.com</a></p>
     </section>
 
     <footer>
